--- a/player/index.html
+++ b/player/index.html
@@ -58,6 +58,7 @@
     <script src="js/utils/pooling/shapeCollection_pool.js"></script>
     <script src="js/renderers/BaseRenderer.js"></script>
     <script src="js/renderers/SVGRenderer.js"></script>
+    <script src="js/renderers/PIXIRenderer.js"></script>    
     <script src="js/renderers/CanvasRenderer.js" data-light-skip="true"></script>
     <script src="js/renderers/HybridRenderer.js" data-light-skip="true"></script>
     <script src="js/mask.js"></script>
@@ -77,6 +78,10 @@
     <script src="js/elements/CompElement.js"></script>
     <script src="js/elements/ImageElement.js"></script>
     <script src="js/elements/SolidElement.js"></script>
+    <script src="js/elements/pixiElements/PIXIBaseElement.js" data-light-skip="true"></script>
+    <script src="js/elements/pixiElements/PIXICompElement.js" data-light-skip="true"></script>
+    <script src="js/elements/pixiElements/PIXIShapeElement.js" data-light-skip="true"></script>
+    <script src="js/elements/pixiElements/PIXIMaskElement.js" data-light-skip="true"></script>
     <script src="js/elements/canvasElements/CVBaseElement.js" data-light-skip="true"></script>
     <script src="js/elements/canvasElements/CVCompElement.js" data-light-skip="true"></script>
     <script src="js/elements/canvasElements/CVImageElement.js" data-light-skip="true"></script>
